--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,12 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.whispersystems</groupId>
+            <artifactId>signal-client-java</artifactId>
+            <version>0.5.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
