--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,13 @@
     <dependencies>
         <dependency>
             <groupId>org.whispersystems</groupId>
-            <artifactId>signal-client-java</artifactId>
-            <version>0.5.1</version>
+            <artifactId>signal-protocol-java</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.signal</groupId>
+            <artifactId>signal-metadata-java</artifactId>
+            <version>0.1.2</version>
         </dependency>
     </dependencies>
 
